<resources>
    <string name="app_name">Inventory</string>
    <string name="category_AddInventory">Add Product</string>
    <string name="category_InventoryList">All Products</string>
    <string name="editor_title_edit_product">Edit Product</string>
    <string name="product_details_title">Product Details</string>
    <string name="delete_all">Delete All Entries</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price ($)</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier e-mail</string>
    <string name="image">Image</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="delete_item">Delete Item</string>
    <string name="order_more">Order more</string>
    <string name="sell">Sell</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_failed">Error with deleting this product</string>
    <string name="delete_successful"> Product deleted</string>
    <string name="delete_dialog_msg">Delete this product?</string>


</resources>
