<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/d_product_image"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/hundredfifty"
                    android:layout_margin="@dimen/ten"
                    android:layout_weight="1"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/d_item_name"
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/seventyfive"
                    android:layout_marginRight="@dimen/eight"
                    android:layout_marginTop="@dimen/fifty"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/eight"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="32sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/item_price"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/d_product_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/item_quantity"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/d_product_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/supplier_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/d_supplier_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/supplier_phone"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/d_supplier_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty"
                android:layout_marginBottom="@dimen/seventyfive">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/supplier_email"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/d_supplier_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</ScrollView>
