<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/twohundred"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/eight"
            android:paddingRight="@dimen/eight"
            android:src="@drawable/cart_add_icon" />

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventyfive"
                android:gravity="center_vertical"
                android:padding="@dimen/eight"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/hundred"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textAlignment="center"
                        android:textColor="@color/orange" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:gravity="center"
                        android:text="@string/sell"
                        android:textAlignment="center"
                        android:textColor="@color/orange" />

                    <ImageView
                        android:id="@+id/sell"
                        android:layout_width="@dimen/fifty"
                        android:layout_height="@dimen/fifty"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/sale" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:gravity="center"
                        android:text="@string/quantity"
                        android:textAlignment="center"
                        android:textColor="@color/orange" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fifty"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

